Adding a nullpointer-check to fix bug #104431.

BUG: 104431

svn path=/trunk/koffice/; revision=409282